--- a/index.xhtml
+++ b/index.xhtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>FileSaver.js demo</title>
-    <link rel="stylesheet" type="text/css" href="demo.css"/>
+    <link rel="stylesheet" type="text/css" href="css/demo.css"/>
     <script type="application/javascript" src="js/Blob.js"></script>
     <script type="application/javascript" src="js/canvas-toBlob.js"></script>
     <script type="application/javascript" src="js/FileSaver.js"></script>
@@ -13,24 +13,10 @@
     <section id="text-demo">
         <h2>接口测试参数生成器</h2>
         <p style="margin: 0 auto; width: 400px;">
-            接口测试列表：<br />
+            xml例子如下：<br />
             &lt;?xml version="1.0" encoding="utf-8"?&gt; <br />
             &lt;root&gt;<br />
-            &lt;title&gt;农迈接口测试&lt;/title&gt;<br />
-            &lt;InterfaceList&gt;<br />
-            &lt;name&gt;首页图片&lt;/name&gt;<br />
-            &lt;method&gt;GET&lt;/method&gt;<br />
-            &lt;url&gt;/api/v1.0/pictures/revolvepictures.ashx?&lt;/url&gt;<br />
-            &lt;params&gt;{"PageSize":6,"PageNow":1}&lt;/params&gt;<br />
-            &lt;Function&gt;revolvepictures&lt;/Function&gt;<br />
-            &lt;/InterfaceList&gt;<br />
-            &lt;InterfaceList&gt;<br />
-            &lt;name&gt;商品类别列表&lt;/name&gt;<br />
-            &lt;method&gt;POST&lt;/method&gt;<br />
-            &lt;url&gt;/api/v1.0/basedata/goodstypes.ashx&lt;/url&gt;<br />
-            &lt;params&gt;&lt;/params&gt;<br />
-            &lt;Function&gt;GoodsTypes&lt;/Function&gt;<br />
-            &lt;/InterfaceList&gt;<br />
+            &lt;title&gt;接口测试&lt;/title&gt;<br />
             &lt;/root&gt;<br />
         </p>
         <textarea class="input" id="text" placeholder="Once upon a time..."/>
