--- a/index.xhtml
+++ b/index.xhtml
@@ -3,11 +3,12 @@
 <head>
     <meta charset="utf-8"/>
     <title>FileSaver.js demo</title>
-    <link rel="stylesheet" type="text/css" href="css/demo.css"/>
+    <!--<link rel="stylesheet" type="text/css" href="css/demo.css"/>-->
     <script type="application/javascript" src="js/Blob.js"></script>
     <script type="application/javascript" src="js/canvas-toBlob.js"></script>
     <script type="application/javascript" src="js/FileSaver.js"></script>
     <script async="" type="application/javascript" src="js/demo.js"></script>
+
 </head>
 <body>
     <section id="text-demo">
