--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <td><input type="text" id="tb_title" /></td>
             <td><input type="text" id="tb_host" /></td>
             <td><input type="text" id="tb_port" /></td>
-            <td><input type="text" id="tb_No" value="[]" /></td>
+            <td><input type="text" id="tb_No" placeholder="不指定则不填"/></td>
         </tr>
         </tbody>
     </table>
@@ -62,7 +62,7 @@
             <td><input type="text" class="i_name"/></td>
             <td><input type="text" class="i_method" placeholder="GET,POST"/></td>
             <td><input type="text" class="i_url"/></td>
-            <td><input type="text" class="i_params"/></td>
+            <td><input type="text" class="i_params" placeholder="没有则不填"/></td>
             <td><input type="text" class="i_hope_result"/></td>
             <!--<td><input type="text" class="i_function"/></td>-->
         </tr>
